<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bdg_screentwo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgreementActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#161823"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/login"
        >

        <TextView
            android:id="@+id/맵_제목"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/map_title"
            android:textSize="36sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#c5c5c5"
            android:scrollbars="horizontal">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="20"
                android:rowCount="20">

                <ImageView
                    android:id="@+id/bB8"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b8"
                    app:srcCompat="@drawable/b8" />

                <ImageView
                    android:id="@+id/bB7"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b7"
                    app:srcCompat="@drawable/b7" />

                <ImageView
                    android:id="@+id/bB6"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b6"
                    app:srcCompat="@drawable/b6" />

                <ImageView
                    android:id="@+id/bB5"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b5"
                    app:srcCompat="@drawable/b5" />

                <ImageView
                    android:id="@+id/bB4"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b4"
                    app:srcCompat="@drawable/b4" />

                <ImageView
                    android:id="@+id/bB3"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b3"
                    app:srcCompat="@drawable/b3" />

                <ImageView
                    android:id="@+id/bB2"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="6"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b2"
                    app:srcCompat="@drawable/b2" />

                <ImageView
                    android:id="@+id/bB1"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:layout_row="7"
                    android:background="#97b4d7"
                    android:contentDescription="@string/b1"
                    app:srcCompat="@drawable/b1" />

                <ImageView
                    android:id="@+id/bC1"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="1"
                    android:layout_marginStart="20dp"
                    android:layout_row="0"
                    android:background="#d9b59b"
                    android:contentDescription="@string/c1"
                    app:srcCompat="@drawable/c1" />

                <ImageView
                    android:id="@+id/bC2"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:background="#d9b59b"
                    android:contentDescription="@string/c2"

                    app:srcCompat="@drawable/c2" />

                <ImageView
                    android:id="@+id/bC3"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="3"
                    android:layout_row="0"
                    android:background="#d9b59b"
                    android:contentDescription="@string/c3"
                    app:srcCompat="@drawable/c3" />

                <ImageView
                    android:id="@+id/bC4"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:layout_row="0"
                    android:background="#d9b59b"
                    android:contentDescription="@string/c4"
                    app:srcCompat="@drawable/c4" />

                <ImageView
                    android:id="@+id/bC5"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="5"
                    android:layout_row="0"
                    android:background="#d9b59b"
                    android:contentDescription="@string/c5"
                    app:srcCompat="@drawable/c5" />

                <ImageView
                    android:id="@+id/bD4"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/d4"
                    app:srcCompat="@drawable/d4" />

                <ImageView
                    android:id="@+id/bD3"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="3"
                    android:layout_row="1"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/d3"
                    app:srcCompat="@drawable/d3" />

                <ImageView
                    android:id="@+id/triangle"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_column="2"
                    android:layout_columnSpan="2"
                    android:layout_row="2"
                    android:layout_rowSpan="2"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/triangle"
                    app:srcCompat="@drawable/triangle" />

                <ImageView
                    android:id="@+id/bD5"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="1"
                    android:layout_marginStart="20dp"
                    android:layout_row="2"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/d5"
                    app:srcCompat="@drawable/d5" />

                <ImageView
                    android:id="@+id/bD6"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="1"
                    android:layout_marginStart="20dp"
                    android:layout_row="3"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/d6"
                    app:srcCompat="@drawable/d6" />

                <ImageView
                    android:id="@+id/bD2"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:layout_row="3"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/d2"
                    app:srcCompat="@drawable/d2" />

                <ImageView
                    android:id="@+id/bD1"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="3"
                    android:layout_row="4"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/d1"

                    app:srcCompat="@drawable/d1" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="2"
                    android:layout_row="4"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/view3" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="1"
                    android:layout_marginStart="20dp"
                    android:layout_row="4"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/view4" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="1"
                    android:layout_marginStart="20dp"
                    android:layout_row="1"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/view5" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:layout_row="1"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/view6" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_column="4"
                    android:layout_row="2"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/view7" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:layout_row="4"
                    android:background="#9fd9b3"
                    android:contentDescription="@string/view8" />

                <ImageView
                    android:id="@+id/bA1"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="3"
                    android:layout_row="7"
                    android:background="#d79bb6"
                    android:contentDescription="@string/a1"
                    app:srcCompat="@drawable/a1" />

                <ImageView
                    android:id="@+id/bA2"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:layout_row="7"
                    android:background="#d79bb6"
                    android:contentDescription="@string/a2"
                    app:srcCompat="@drawable/a2" />

                <ImageView
                    android:id="@+id/bA3"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="5"
                    android:layout_row="7"
                    android:background="#d79bb6"
                    android:clickable="true"
                    android:contentDescription="@string/a3"
                    app:srcCompat="@drawable/a3" />

                <ImageView
                    android:id="@+id/bA4"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="6"
                    android:layout_row="7"
                    android:background="#d79bb6"
                    android:contentDescription="@string/a4"
                    app:srcCompat="@drawable/a4" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="8"
                    android:layout_rowSpan="1"
                    android:contentDescription="@string/studyroom"
                    app:srcCompat="@drawable/studyroom" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="4"
                    android:layout_columnSpan="3"
                    android:layout_row="8"
                    android:layout_rowSpan="1"
                    android:contentDescription="@string/cinema"
                    app:srcCompat="@drawable/cinema" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="9"
                    android:layout_row="7"
                    android:background="#c5c5c5"
                    android:contentDescription="@string/imageview12"
                    app:srcCompat="@color/buttonBlue" />


                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="10"
                    android:layout_row="7"
                    android:background="#c5c5c5"
                    android:contentDescription="@string/imageview13"
                    app:srcCompat="@color/buttonBlue" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="11"
                    android:layout_columnSpan="3"
                    android:layout_row="6"
                    android:layout_rowSpan="2"
                    android:contentDescription="@string/elevator"
                    app:srcCompat="@drawable/elevator" />

                <ImageView
                    android:id="@+id/bE1"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="16"
                    android:layout_row="1"
                    android:background="#bca6cb"
                    android:contentDescription="@string/e1"
                    app:srcCompat="@drawable/e1" />

                <ImageView
                    android:id="@+id/bE2"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="17"
                    android:layout_row="1"
                    android:background="#bca6cb"
                    android:contentDescription="@string/e2"
                    app:srcCompat="@drawable/e2" />

                <ImageView
                    android:id="@+id/bE3"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="18"
                    android:layout_row="1"
                    android:background="#bca6cb"
                    android:contentDescription="@string/e3"
                    app:srcCompat="@drawable/e3" />

                <ImageView
                    android:id="@+id/bE4"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:layout_column="19"
                    android:layout_row="1"
                    android:background="#bca6cb"
                    android:contentDescription="@string/e4"
                    app:srcCompat="@drawable/e4" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="18"
                    android:layout_columnSpan="2"
                    android:layout_row="5"
                    android:layout_rowSpan="2"
                    android:contentDescription="@string/multimedia"
                    app:srcCompat="@drawable/multimedia" />


            </GridLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/map_OKBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#45464f"
        android:fontFamily="@font/hanna"
        android:text="@string/OK"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>